--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,17 @@ body {
     padding: 0;
 
 }
-
+#page-num{
+    position: absolute;
+    bottom: 2%;
+    text-align: center;
+    z-index: 20;
+    background-color: #000000;
+    opacity:0.60;
+    color: white;
+    padding: 0.1rem;
+    right: 0;
+}
 @-webkit-keyframes circle {
     0% {
         transform: rotate(0deg);
@@ -65,6 +75,50 @@ body {
     left: 0.2rem;
     top: 0.2rem;
 
+}
+
+.load-container{
+    position: absolute;
+    width: 6.4rem;
+    bottom: 10%;
+    color: white;
+}
+.loading-spinner{
+    width: 6.4rem;
+    height: 1rem;
+    text-align: center;
+    font-size: 0.5rem;
+}
+.loading-spinner > div {
+    background-color: #67CF22;
+    height: 100%;
+    width: 0.2rem;
+    display: inline-block;
+
+    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+    animation: stretchdelay 1.2s infinite ease-in-out;
+}
+.loading-spinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.loading-spinner .rect3 {
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.loading-spinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.loading-spinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+.page-1-1{
+    background-color: #0A3170;
 }
 
 .page-2-1 {
